# EIMLIA-TEU

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
config/: default.yaml
data/: README.md
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  MODELS.md  README.md
notebooks/: quickstart.ipynb
scripts/: evaluate_models.py  generate_synthetic_data.py  run_simulation.py  start_api.py  train_models.py
src/: __init__.py
src/api/: __init__.py  main.py
src/models/: __init__.py  base.py  data_loader.py  emerginet.py  evaluation.py  triagemaster.py  urgentiaparse.py
src/process_mining/: __init__.py  conformance.py  discovery.py  pipeline.py
src/simulation/: __init__.py  config.py  hybrid.py  mesa_sma.py  orchestrator.py  patient_generator.py  simpy_des.py
src/utils/: __init__.py  logging.py  metrics.py  visualization.py
tests/: __init__.py  conftest.py  test_all.py
